@@ -17,6 +17,7 @@
         - support mounting certain D41 images with more than 35 tracks
         - Bugfix: Prevent error when parsing one-character commands
         - New fastloader: Ultraboot
+        - New fastloader: Hypra-Load
 
 2012-02-26 - release 0.10.3
         - Bugfix: Un-break I2C display communication
